[tool.poetry]
name = "jupyter-lab"
version = "0.1.0"
description = "Jupyter notebook in a docker environment"
authors = ["Mikhail Kuklin"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
numpy = "^1.21.5"
pandas = "^1.3.5"
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
matplotlib = "^3.5.1"
pytest-watch = "^4.2.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
pdfrw = "^0.4"

[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

